src/test/deca/context/valid/declClass-returnTypeVoid.deca
class A {
    void voidMethod(){
        int a = 5;
    }
}