src/test/deca/context/invalid/method-sameNameAsSuperField.deca
class A{ int a = 4;
}

class B extends A {
	void a(){}
}
